--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ main{
     color: #fff;
     align-items: center;
     margin-bottom: 50px;
+    
 }
 
 .inicio span{
@@ -88,6 +89,7 @@ main{
 .imgs{
     display: flex;
     justify-content: space-between;
+    flex-flow: row wrap;
     
 }
 
